chore(zero-api): PUT /users/email-confirmation endpoint
