# apps/zero-api/swagger.json
@@ -77,6 +77,10 @@
             "items": {
               "$ref": "#/components/schemas/UserRole"
             }
+          },
+          "emailConfirmed": {
+            "type": "boolean",
+            "example": false
           }
         },
         "required": [
@@ -84,7 +88,8 @@
           "email",
           "firstName",
           "lastName",
-          "roles"
+          "roles",
+          "emailConfirmed"
         ]
       },
       "CreateUserDto": {
@@ -188,6 +193,18 @@
         "required": [
           "token",
           "newPassword"
+        ]
+      },
+      "UpdateEmailConfirmationDto": {
+        "type": "object",
+        "properties": {
+          "token": {
+            "type": "string",
+            "example": "22c026e5-2f67-4ccd-9299-c79b91cb9438"
+          }
+        },
+        "required": [
+          "token"
         ]
       },
       "DraftType": {
@@ -544,6 +561,33 @@
         "responses": {
           "200": {
             "description": ""
+          }
+        },
+        "tags": [
+          "users"
+        ]
+      }
+    },
+    "/api/users/email-confirmation": {
+      "put": {
+        "operationId": "UsersController_confirmEmail",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateEmailConfirmationDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": ""
+          },
+          "404": {
+            "description": "Invalid token provided"
           }
         },
         "tags": [
